# oreshnek

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  analisis_problemas.txt  errores_compilacion.txt  errores_en_server.cpp.txt  example.cpp  nuevos_errores_compilacion.txt  propuesta_implementacion_mejorado.txt
config/: oreshnek.example.json
docs/: ANALYSIS.md  ARCHITECTURE.md  COMPARISON_DROGON.md  DATABASE.md  LOAD_AND_FUZZ_PLAN.md  ROADMAP.md  SECURITY.md
examples/: 01_hello_json.cpp  02_middleware.cpp  03_rest_crud_db.cpp  04_static_files.cpp  05_production.cpp  06_video_platform.cpp  CMakeLists.txt  README.md  common.h
include/: oreshnek.h
include/oreshnek/: Oreshnek.h
include/oreshnek/http/: Compression.h  HttpEnums.h  HttpParser.h  HttpRequest.h  HttpResponse.h  Multipart.h
include/oreshnek/json/: JsonParser.h  JsonValue.h
include/oreshnek/net/: Connection.h  TlsContext.h
include/oreshnek/platform/: Config.h  DatabaseBackend.h  DatabaseManager.h  Models.h  PgBackend.h  PgPool.h  SecurityUtils.h  SqlResult.h  SqliteBackend.h  SqlitePool.h
include/oreshnek/server/: Metrics.h  Middleware.h  RateLimiter.h  Router.h  Server.h  ThreadPool.h
include/oreshnek/utils/: Logger.h
src/: main.cpp  oreshnek.cpp  server.cpp
src/http/: Compression.cpp  HttpParser.cpp  HttpRequest.cpp  HttpResponse.cpp  Multipart.cpp
src/json/: JsonParser.cpp  JsonValue.cpp
src/net/: Connection.cpp  TlsContext.cpp
src/platform/: Config.cpp  DatabaseManager.cpp  PgBackend.cpp  PgPool.cpp  SecurityUtils.cpp  SqliteBackend.cpp  SqlitePool.cpp
src/server/: .Server.cpp.swp  Metrics.cpp  RateLimiter.cpp  Router.cpp  Server.cpp  ThreadPool.cpp
src/utils/: Logger.cpp
static/: index.html  script.js  style.css  watch.html
tests/: compression_test.cpp  db_test.cpp  integration_test.cpp  lifecycle_test.cpp  metrics_test.cpp  middleware_test.cpp  multipart_test.cpp  pg_test.cpp  rate_limit_test.cpp  security_test.cpp  tls_test.cpp
tests/fuzz/: README.md  fuzz_http_parser.cpp  fuzz_replay.cpp  parser_fuzz_target.h
tests/fuzz/corpus/: expect_100  get_query  get_simple  head  incremental_post  pipeline  post_chunked  post_content_length
tools/: analyze.sh
